<resources>
    <string name="app_name">MyGdut</string>
    <string name="action_settings">Settings</string>
    <string name="verifycode">verifyCode</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_id">学号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice_title">公告</string>
    <string name="schedule_title">课表</string>
    <string name="score_title">成绩</string>
    <string name="settings_title">设置</string>
    <string name="empty_description">empty</string>
    <string name="empty_text">空</string>
    <string name="logo_description">logo</string>
    <string name="class_score">课程成绩</string>
    <string name="score_num_text">共X门成绩</string>
    <string name="gpa_text">暂无成绩</string>
    <string name="classes">课程</string>
    <string name="mark">成绩</string>
    <string name="gpa">绩点</string>
    <string name="period">学时</string>
    <string name="credit">学分</string>
    <string name="term_all">大学全部</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="schedule_setting">schedule setting</string>
    <string name="class_place">上课地点</string>
    <string name="class_time">上课时间</string>
    <string name="class_teacher">授课老师</string>
    <string name="class_type">课程类型</string>
    <string name="close">关闭</string>
    <string name="classmate">上课班级</string>
    <string name="schedule_refresh">schedule refresh</string>
    <string name="delete">删除</string>
    <string name="exam">考试安排</string>
    <string name="week">周次</string>
    <string name="time">时间</string>
    <string name="seat">座位号</string>
    <string name="exam_place">考试地点</string>
    <string name="exam_mode">考试形式</string>
    <string name="title">标题</string>
    <string name="next_exam">下一门考试科目</string>
    <string name="paper_num">试卷编号</string>
    <string name="exam_date">考试日期</string>
    <string name="arrange_type">安排类型</string>
    <string name="exam_type">考试类别</string>
    <string name="choose_week">请选择周次</string>
    <string name="choose_order">请选择第几节课</string>
    <string name="building">教学楼</string>
    <string name="room_num">课室号</string>
    <string name="class_name">课程名称</string>
    <string name="chosen_week">已选周次:</string>
    <string name="chosen_time">时间:</string>
    <string name="home_title">主页</string>
    <string name="app_info">应用信息</string>
    <string name="github_url">GitHub地址</string>
    <string name="download_url">下载页面</string>
    <string name="schedule_black_list">schedule black list</string>
    <string name="schedule_black_list_title">课程黑名单</string>
    <string name="output_ics">output ics</string>
    <string name="output">导出</string>
    <string name="generate_alarm">生成提醒</string>
    <string name="before">提前</string>
    <string name="_70">70</string>
    <string name="minute">分钟</string>
</resources>
