<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_week" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_new_week_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/choose_order" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_new_order_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/building" />

        <View
            android:layout_width="10dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#aa000000" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/room_num" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="6dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="6dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_teacher" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="6dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_mate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/classmate" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="@string/chosen_week" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_new_week_tips"
            android:layout_width="wrap_content"
            android:layout_marginEnd="16sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="@string/chosen_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_new_order_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>