<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diy_class"
            android:textSize="24sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_new_week_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_week" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_new_week_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/choose_order" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_new_order_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/building" />

        <View
            android:layout_width="10dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#aa000000" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/room_num" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="6dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="6dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_teacher" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="6dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_input_class_mate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/classmate" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="@string/chosen_week" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_new_week_tips"
            android:layout_width="wrap_content"
            android:layout_marginEnd="16sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="@string/chosen_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_new_order_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16sp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_new_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/dialog_new_btn_confirm"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_new_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/dialog_new_btn_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>